add keyword meta

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
       name="google-site-verification"
       content="ERKllSAZ7_48bn1Ux4esIUmhC9NrPqdFhLXX0eZ8YJk"
     />
+    <meta
+      name="description"
+      content="Saya adalah Web Developer dengan background IT dan mempunyai pengalaman dalam pengembangan web"
+    />
+    <meta
+      name="keywords"
+      content="gunawan, web developer, fullstack developer"
+    />
+    <meta name="author" content="Gunawan" />
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <meta name="googlebot" content="index, follow, max-image-preview:large" />
     <meta name="title" content="Portfolio | Gunawan" />
